Section 7: Angular Services Finished

--- a/src/app/components/books-list/book-detail/book-detail.component.html
+++ b/src/app/components/books-list/book-detail/book-detail.component.html
@@ -1,1 +1,9 @@
-<p>book-detail works!</p>
+<button class="btn" [routerLink]="['../../books']">Volver</button>
+
+<div class="container">
+	<img [src]="book?.imagen" [alt]="book?.titulo">
+	<div class="book-data">
+		<h2>{{ book?.titulo }}</h2>
+		<p>{{ book?.publicado }}</p>
+	</div>
+</div>
