--- a/src/app/components/books-list/books-list.component.html
+++ b/src/app/components/books-list/books-list.component.html
@@ -1,1 +1,6 @@
-<p>books-list works!</p>
+<div class="container">
+	<div class="card" *ngFor="let book of books" [routerLink]="['../book', book.id]">
+		<img [src]="book?.imagen" alt="">
+		<p>{{ book?.titulo }}</p>
+	</div>
+</div>
